# django-micboard

./: .codecov.yml  .commitlintrc.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.local.example  .fossabot.yml  .gitignore  .mypy_errors.txt  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_2026-01-28.md  BATTERY_HEALTH_TRACKING.md  BREAKING_CHANGES_v26.01.md  CHANGELOG.md  CONFIGURATION.md  CONTEXT.md  CONTRIBUTING.md  FILE_MANIFEST.md  IMPLEMENTATION_WORKSHEET.md  IMPORT_SUMMARY.md  INTEGRATION_STATUS.md  ITERATION_1_COMPLETE.md  ITERATION_1_SUMMARY.md  ITERATION_2_COMPLETE.md  ITERATION_2_SUMMARY.md  ITERATION_3_COMPLETE.md  ITERATION_3_SUMMARY.md  Justfile  LICENSE  LIFECYCLE_MIGRATION_COMPLETE.md  LINTING_FIXES_AND_ENHANCEMENTS.md  MANIFEST.in  MANUFACTURER_AGNOSTIC_REFACTORING.md  MIGRATION_PREVIEW.md  MODERN_TOOLING.md  (+72 more)
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  internal_refactor_plan.md  release-drafter.yml
.github/agents/: api-architect.agent.md  context7.agent.md  debug.agent.md  principal-software-engineer.agent.md  python-mcp-expert.agent.md  se-security-reviewer.agent.md
.github/instructions/: python.instructions.md  security-and-owasp.instructions.md
.github/prompts/: breakdown-feature-prd.prompt.md  breakdown-test.prompt.md  create-github-action-workflow-specification.prompt.md  create-implementation-plan.prompt.md  create-specification.prompt.md  project-workflow-analysis-blueprint-generator.prompt.md  python-mcp-server-generator.prompt.md  release-prep.prompt.md  sql-optimization.prompt.md
.github/scripts/: .gitkeep
.github/workflows/: README.md  auto-release.yml  build-windows-image.yml  ci.yml  dependency-review.yml  docs.yml  generate-matrix.py  mutation-testing.yml  prepare-release.yml  publish-pypi.yml  publish-release.yml  publish-testpypi.yml  publish.yml  recover-github-release.yml  release-drafter.yml  release.yml  scorecard.yml  warden.yml
demo/: README.md  __init__.py  asgi.py  populate_demo.py  settings.py  urls.py
demo/docker/: .env.example  DOCKER_TESTING_GUIDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  up.sh
demo/windows/: Dockerfile  build-windows.ps1  entrypoint.ps1
docs/: CONFIGURATION.md  CONFIGURATION_CONSOLIDATED.md  DEVICE_LIFECYCLE_NO_BACKCOMPAT.md  DEVICE_LIFECYCLE_QUICKSTART.md  DEVICE_LIFECYCLE_QUICK_REFERENCE.md  DEVICE_LIFECYCLE_REFACTORING.md  LIFECYCLE_ARCHITECTURE_VISUAL.md  LIFECYCLE_IMPLEMENTATION_SUMMARY.md  PHASE_2_INTEGRATION_CHECKLIST.md  REFACTORING_PLAN.md  SHURE_NETWORK_GUID_TROUBLESHOOTING.md  VPN_DEVICE_POPULATION.md  api-reference.md  architecture.md  changelog.md  configuration.md  demo-windows.md  dependency-management.md  design.md  development.md  index.md  installation.md  multitenancy-quickref.md  multitenancy.md  packaging.md  plugin-development.md  quickstart.md  rate-limiting.md  requirements.txt  services-quick-reference.md  services.md  shure-integration.md  shure-system-api-endpoints.md  signal-handlers.md
docs/adr/: 001-service-layer-decomposition.md  002-extract-model-business-logic.md  003-admin-dashboard-modularization.md  004-standardize-manufacturer-plugins.md  005-unify-settings-proxy.md  006-test-infrastructure-overhaul.md  007-api-layer-introduction.md  008-remove-compat-shim.md  009-consolidate-exception-hierarchy.md  011-introduce-eventbus.md  (+2 more)
example_project/: __init__.py  asgi.py  settings.py  urls.py
micboard/: ARCHITECTURE.md  __init__.py  admin.py  alerts.py  apps.py  async_services.py  caching.py  checks.py  cli_tools.py  conf.py  consumers.py  context_processors.py  decorators.py  discovery.py  email.py  exceptions.py  filters.py  integration_patterns.py  metrics.py  middleware.py  model_lifecycle.py  models.py  performance_tools.py  query_optimization.py  routing.py  serializers.py  settings_template.py  shure_api_client.py  signals.py  urls.py  views.py  viewsets.py
scripts/: README_SHURE_SCRIPTS.md  calculate_calver.py  check_coverage_inventory.py  check_docs_requirements.py  check_import_architecture.py  check_migration_integrity.py  clean_and_seed_discovery.py  debug_post.py  device_discovery.py  device_discovery_standalone.py  diagnose_api_structure.py  explore_shure_api.py  fix_mypy.py  libcst_fix.py  normalize_sdist.py  pre-release-audit.sh  release-quickstart.sh  shure_api_health_check.py  shure_api_test.py  shure_configure_discovery_ips.py  shure_discovery_monitor.py  smoke_test_installed_wheel.py  test_band_plan_detection.py  test_deduplication.py  test_device_creation_and_polling.py  test_discovery_cidr.py  test_micboard_shure_integration.py  test_models_with_shure_data.py  test_signal_handlers.py  trigger_sync.py  validate_shure_integration.py  validate_wheel.py  verify-release.sh  verify_micboard_urls.py  verify_phase4.py
tests/: __init__.py  async_utils.py  conftest.py  core_only_settings.py  custom_user_settings.py  settings.py  test_access_security.py  test_activity_log_admin.py  test_admin.py  test_admin_audit_checks.py  test_admin_channels_coverage.py  test_admin_chassis_refresh.py  test_admin_configuration_discovery_coverage.py  test_admin_custom_access.py  test_admin_discovered_device_coverage.py  test_admin_integrations_realtime_coverage.py  test_admin_manufacturer_scope_coverage.py  test_admin_mixins.py  test_admin_settings_coverage.py  test_admin_sortable_tenant_security.py  test_admin_status_actions.py  test_admin_tenant_access.py  test_admin_users.py  test_admin_wireless_chassis_coverage.py  test_alert_live_fragment.py  test_alert_view_branches.py  test_alerts_email.py  test_api_server_admin_security.py  test_api_views.py  test_assignment_live_fragment.py  test_assignment_view_branches.py  test_async_monitoring_tasks.py  test_audit_admin_command.py  test_audit_regulatory_commands.py  test_authenticated_transport_security.py  test_bulk_settings_form_branches.py  test_calver.py  test_chargers.py  test_chassis_regulatory_service.py  test_chassis_transaction_lifecycle.py  (+108 more)
(+855 files in other folders)
