[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-micboard"
version = "26.01.27"
description = "Real-time multi-manufacturer wireless microphone monitoring for Django"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Django Micboard Contributors"}
]
keywords = [
    "django",
    "wireless",
    "microphone",
    "monitoring",
    "shure",
    "sennheiser",
    "real-time",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=4.2,<6.0",
    "python-dateutil>=2.8",
    "requests>=2.28",
]

[project.optional-dependencies]
# Background task processing for polling, discovery, and async operations
tasks = [
    "django-q2>=1.4.0",
]
# Server-side real-time broadcast layer for internal pub/sub patterns
# (NOT for browser WebSockets - frontend uses HTMX)
realtime = [
    "channels>=4.0",
    "channels-redis>=4.0",
]
# Backend integration with Shure System API hardware WebSocket endpoint
# for receiving real-time device telemetry (battery, RF, audio levels).
# NOT for browser WebSockets - frontend uses HTMX polling/SSE.
# See: micboard/integrations/shure/websocket.py
shure = [
    "websockets>=12.0.0",
]
# API filtering capabilities for viewsets
api = [
    "django-filter>=23.0",
]
# Admin interface enhancements (date ranges, sortable lists)
admin-ui = [
    "django-admin-rangefilter>=0.13.0",
    "django-admin-sortable2>=2.2.0",
]
# CSV/Excel import/export in admin
import-export = [
    "django-import-export>=4.0",
]
# Modern admin theme
admin-theme = [
    "django-unfold>=0.30.0",
]
# Model change history tracking
audit = [
    "django-simple-history>=3.5.0",
]
# Redis-based caching for improved performance
performance = [
    "django-redis>=5.4.0",
    "hiredis>=3.0.0",
]
# Health check endpoints
health-check = [
    "django-health-check>=3.18.0",
]
# Field-level encryption
security = [
    "django-cryptography>=1.1",
]
# YAML fixture loading for device specs
fixtures = [
    "PyYAML>=6.0.0",
]
# Image upload support (performer photos, venue logos)
media = [
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "factory-boy>=3.2",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2.0",
    "django-extensions>=3.2.0",
    "types-channels>=4.0",
    "types-redis>=4.3",
    "types-requests>=2.28",
    "types-python-dateutil>=2.8",
    "bandit>=1.7",
    "interrogate>=1.5",
    "coverage>=7.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.18",
]
all = [
    "django-q2>=1.4.0",  # tasks
    "channels>=4.0",  # realtime
    "channels-redis>=4.0",  # realtime
    "websockets>=12.0.0",  # shure
    "django-filter>=23.0",  # api
    "django-admin-rangefilter>=0.13.0",  # admin-ui
    "django-admin-sortable2>=2.2.0",  # admin-ui
    "django-import-export>=4.0",  # import-export
    "django-unfold>=0.30.0",  # admin-theme
    "django-simple-history>=3.5.0",  # audit
    "django-redis>=5.4.0",  # performance
    "hiredis>=3.0.0",  # performance
    "django-health-check>=3.18.0",  # health-check
    "django-cryptography>=1.1",  # security
    "PyYAML>=6.0.0",  # fixtures
    "Pillow>=10.0.0",  # media
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "factory-boy>=3.2",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2.0",
    "django-extensions>=3.2.0",
    "types-channels>=4.0",
    "types-redis>=4.3",
    "types-requests>=2.28",
    "types-python-dateutil>=2.8",
    "bandit>=1.7",
    "interrogate>=1.5",
    "coverage>=7.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.18",
]

[project.urls]
Homepage = "https://github.com/justprosound/django-micboard"
Documentation = "https://django-micboard.readthedocs.io"
Repository = "https://github.com/justprosound/django-micboard.git"
"Bug Tracker" = "https://github.com/justprosound/django-micboard/issues"
Changelog = "https://github.com/justprosound/django-micboard/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["micboard"]

[tool.setuptools.package-data]
micboard = [
    "templates/**/*.html",
    "static/**/*.js",
    "static/**/*.css",
    "static/**/*.scss",
    "static/**/*.map",
    "migrations/*.py",
]

# ============================================================================
# Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external dependencies)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "slow: Slow-running tests",
    "plugin: Plugin-specific tests",
    "django_db: Requires Django database access",
    "asyncio: Asynchronous tests",
]

addopts = [
    "--cov=micboard",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--strict-markers",
    "-ra",
    "--tb=short",
    "--disable-warnings",
]

timeout = 300

[tool.coverage.run]
branch = true
source = ["micboard"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/virtualenv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if 0:",
    "if False:",
    "if settings.DEBUG",
    "except ImportError",
    "class .*\\bProtocol\\):",
    "@overload",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Linting & Type Checking
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "migrations",
    "scripts/",
    "example_project/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "N", "Q", "B", "T20"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "E501"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"micboard/apps.py" = ["T20"]
"*/migrations/*.py" = ["ALL"]
"example_project/*.py" = ["S105", "S106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["micboard"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
show_error_codes = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "example_project.settings"

# ============================================================================
# Django Configuration
# ============================================================================
[tool.django]
settings_module = "tests.settings"

# ============================================================================
# Package Metadata
# ============================================================================
[project.entry-points."django.apps"]
micboard = "micboard.apps.MicboardConfig"

[tool.pbr]
skip_authors = true
skip_changelog = true
