[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-micboard"
version = "26.07.15"
description = "Real-time multi-manufacturer wireless microphone monitoring for Django"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Django Micboard Contributors"}
]
keywords = [
    "django",
    "wireless",
    "microphone",
    "monitoring",
    "shure",
    "sennheiser",
    "real-time",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=5.1,<6.1",
    "Pillow>=10.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
# Recommended integration stack - opt-in to avoid bloat
standard = [
    "djangorestframework",
    "drf-spectacular",
    "djangorestframework-camel-case",
    "django-rest-knox",
    "django-auth-adfs",
    "django-guardian",
    "django-unfold",
    "django-htmx",
    "pydantic",
    "tenacity",
    "django-environ",
    "django-lifecycle",
    "django-split-settings",
    "django-csp",
    "django-safemigrate",
    "django-nh3",
    "cryptography",
    "httpx",
    "huey>=3.2,<4",
    "redis>=5",
    "django-filter",
    "django-constance",
    "django-extensions",
    "django-watchman",
    "django-template-partials",
    "drf-standardized-errors",
    "sentry-sdk",
]
# Background task processing for polling, discovery, and async operations
tasks = [
    "huey>=3.2,<4",
    "redis>=5",
]
# Server-side real-time broadcast layer for internal pub/sub patterns
# (NOT for browser WebSockets - frontend uses HTMX)
realtime = [
    "channels>=4.0",
    "channels-redis>=4.0",
]
# Backend integration with Shure System API hardware WebSocket endpoint
# for receiving real-time device telemetry (battery, RF, audio levels).
# NOT for browser WebSockets - frontend uses HTMX polling/SSE.
# See: micboard/integrations/shure/websocket.py
shure = [
    "websockets>=12.0.0",
]
# API filtering capabilities for viewsets
api = [
    "django-filter>=23.0",
]
# Admin interface enhancements (date ranges, sortable lists)
admin-ui = [
    "django-admin-rangefilter>=0.13.0",
    "django-admin-sortable2>=2.2.0",
]
# CSV/Excel import/export in admin
import-export = [
    "django-import-export>=4.0",
]
# Modern admin theme
admin-theme = [
    "django-unfold>=0.30.0",
]
# Model change history tracking
audit = [
    "django-simple-history>=3.5.0",
]
# Redis-based caching for improved performance
performance = [
    "django-redis>=5.4.0",
    "hiredis>=3.0.0",
]
# Field-level encryption
security = [
    "django-cryptography>=1.1",
]
# YAML fixture loading for device specs
fixtures = [
    "PyYAML>=6.0.0",
]
# Image upload support (performer photos, venue logos)
media = [
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "factory-boy>=3.2",
    "pre-commit>=3.0",
    "pre-commit-hooks>=6.0",
    "django-safemigrate>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pathspec<1.2",  # pathspec 1.1.x crashes mypy when optional re2 is absent
    "django-stubs[compatible-mypy]",
    "django-debug-toolbar",
    "django-extensions>=3.2.0",
    "types-channels>=4.0",
    "types-redis>=4.3",
    "types-python-dateutil>=2.8",
    "bandit>=1.7",
    "interrogate>=1.5",
    "coverage>=7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.6",
    "pymdown-extensions",
]
all = [
    "djangorestframework",
    "drf-spectacular",
    "djangorestframework-camel-case",
    "django-rest-knox",
    "django-auth-adfs",
    "django-guardian",
    "django-htmx",
    "tenacity",
    "django-environ",
    "django-lifecycle",
    "django-split-settings",
    "django-csp",
    "django-nh3",
    "cryptography",
    "django-constance",
    "django-watchman",
    "django-template-partials",
    "drf-standardized-errors",
    "sentry-sdk",
    "huey>=3.2,<4",  # tasks
    "redis>=5",  # tasks
    "channels>=4.0",  # realtime
    "channels-redis>=4.0",  # realtime
    "websockets>=12.0.0",  # shure
    "django-filter>=23.0",  # api
    "django-admin-rangefilter>=0.13.0",  # admin-ui
    "django-admin-sortable2>=2.2.0",  # admin-ui
    "django-import-export>=4.0",  # import-export
    "django-unfold>=0.30.0",  # admin-theme
    "django-simple-history>=3.5.0",  # audit
    "django-redis>=5.4.0",  # performance
    "hiredis>=3.0.0",  # performance
    "django-cryptography>=1.1",  # security
    "PyYAML>=6.0.0",  # fixtures
    "Pillow>=10.0.0",  # media
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "factory-boy>=3.2",
    "pre-commit>=3.0",
    "pre-commit-hooks>=6.0",
    "django-safemigrate>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pathspec<1.2",  # pathspec 1.1.x crashes mypy when optional re2 is absent
    "django-stubs[compatible-mypy]",
    "django-debug-toolbar",
    "django-extensions>=3.2.0",
    "types-channels>=4.0",
    "types-redis>=4.3",
    "types-python-dateutil>=2.8",
    "bandit>=1.7",
    "interrogate>=1.5",
    "coverage>=7.0",
    "mkdocs>=1.6",
]

[project.urls]
Homepage = "https://github.com/justprosound/django-micboard"
Documentation = "https://django-micboard.readthedocs.io"
Repository = "https://github.com/justprosound/django-micboard.git"
"Bug Tracker" = "https://github.com/justprosound/django-micboard/issues"
Changelog = "https://github.com/justprosound/django-micboard/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["micboard", "micboard.*"]
exclude = [
    "micboard.tests*",
    "tests*",
    "example_project*",
    "scripts*",
]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "fixtures/*",
    "migrations/*",
    "static/**/*",
    "templates/**/*",
]

# ============================================================================
# Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external dependencies)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "slow: Slow-running tests",
    "plugin: Plugin-specific tests",
    "django_db: Requires Django database access",
    "asyncio: Asynchronous tests",
]

addopts = [
    "--strict-markers",
    "-ra",
    "--tb=short",
]
filterwarnings = [
    "error::DeprecationWarning",
]

timeout = 300

[tool.coverage.run]
branch = true
source = ["micboard"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/virtualenv/*",
    "setup.py",
]

[tool.coverage.report]
include_namespace_packages = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if 0:",
    "if False:",
    "if settings.DEBUG",
    "except ImportError",
    "class .*\\bProtocol\\):",
    "@overload",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ==== Ruff ====
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "migrations",
    "example_project/",
]

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E", "W", # Pycodestyle
  "I",   # Isort
  "DJ",  # Django
  "UP",  # Pyupgrade
  "B",   # Bugbear
  "SIM", # Simplify
  "C4",  # Comprehensions
  "C901", # McCabe complexity
  "A",   # Flake8-builtins
  "N",   # Pep8-naming
  "RUF", # Ruff-specific
  "S",   # Bandit
  "Q",   # Quotes
  "T20", # Print statements
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
]
ignore = [
    "COM812", "ISC001", "E501", "S101", "S105", "RUF012",
    "DJ001", "DJ012", "N815", "DJ008",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"micboard/apps.py" = ["T20"]
"micboard/cli_tools.py" = ["T201"]  # CLI tools legitimately use print()
"micboard/query_optimization.py" = ["T201"]  # Debug utilities legitimately use print()
"*/migrations/*.py" = ["ALL"]
"example_project/*.py" = ["S105", "S106"]
"tests/*.py" = ["S106"]  # Test credentials are intentionally non-production.

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 400

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["micboard"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"

# ==== uv ====
[tool.uv]
managed = true
package = true
constraint-dependencies = [
    "Django==5.1.15",
    "django-debug-toolbar<7",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
exclude = ["^build/", "^dist/", "^tests/"]
strict = true
disallow_any_generics = false
ignore_missing_imports = true
show_error_codes = true

[tool.django-stubs]
django_settings_module = "tests.settings"

# ============================================================================
# Django Configuration
# ============================================================================
[tool.django]
settings_module = "tests.settings"

# ============================================================================
# Package Metadata
# ============================================================================
[project.entry-points."django.apps"]
micboard = "micboard.apps.MicboardConfig"

[tool.pbr]
skip_authors = true
skip_changelog = true

[dependency-groups]
release = [
    "pypi-attestations==0.0.29",
    "twine==6.2.0",
]
